[package]
name = "purple_cello_reverse_proxy"
version = "0.1.0"
edition = "2021"
description = "A reverse proxy for the Purple Cello Minecraft Server."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
purple_cello_mc_protocol = { git = "https://github.com/PurpleCelloServer/purple_cello_mc_protocol.git", rev = "9ff2e95c66b1d773362936733273350e4bdd399a" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.21.5"
rand = "0.8.5"
lazy_static = "1.4"
rsa = "0.6"
